force-app/main/default/objects/loan__Loan_Payment_Transaction__c/loan__Loan_Payment_Transaction__c.object-meta.xml
<CustomObject>
    <customHelpPage>loan__LoanPaymentTransactionHelp</customHelpPage>
    <description>Loan Payment Transaction</description>
    <label>Loan Payment Transaction</label>
    <nameField>
        <displayFormat>LPT-{000000000}</displayFormat>
        <label>Loan Payment Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Payment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>