force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/Dishonour_Override__c.field-meta.xml
<CustomField>
    <fullName>Dishonour_Override__c</fullName>
    <label>Dishonour Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>