force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Additional_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Additional_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount paid towards additional interest.</description>
    <inlineHelpText>Amount paid towards additional interest.</inlineHelpText>
    <label>Additional Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>