force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Automated_Payment_Setup__c.field-meta.xml
<CustomField>
    <fullName>loan__Automated_Payment_Setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Automated Payment Setup</label>
    <referenceTo>loan__Automated_Payment_Setup__c</referenceTo>
    <relationshipLabel>Loan Payment Transactions</relationshipLabel>
    <relationshipName>Loan_Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>