force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Cash_Receipt_Application__c.field-meta.xml
<CustomField>
    <fullName>loan__Cash_Receipt_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Cash Receipt</description>
    <inlineHelpText>Reference to Cash Receipt</inlineHelpText>
    <label>Cash Receipt Application</label>
    <referenceTo>clcommon__Cash_Receipt_Application__c</referenceTo>
    <relationshipLabel>Loan Payment Transactions</relationshipLabel>
    <relationshipName>Loan_Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>