force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Cleared_Reversal_Txn_Count__c.field-meta.xml
<CustomField>
    <fullName>loan__Cleared_Reversal_Txn_Count__c</fullName>
    <label>Cleared Reversal Txn Count</label>
    <summaryFilterItems>
        <field>loan__Repayment_Transaction_Adjustment__c.loan__Cleared__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Repayment_Transaction_Adjustment__c.loan__Rejected__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>loan__Repayment_Transaction_Adjustment__c.loan__Loan_Payment_Transaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>