force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Fees__c.field-meta.xml
<CustomField>
    <fullName>loan__Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Fees component for this payment</description>
    <inlineHelpText>This is the fees amount collected for the loan</inlineHelpText>
    <label>Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>