force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Installment_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Installment_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines whether the current payment is installment payment or not</description>
    <inlineHelpText>This field determines whether payment transaction is installment payment or not</inlineHelpText>
    <label>Installment Payment</label>
    <type>Checkbox</type>
</CustomField>