force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Interest_Component_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Component_Snapshot__c</fullName>
    <description>This stores the snapshot of interest components of the contract.</description>
    <inlineHelpText>This stores the snapshot of interest components of the contract.</inlineHelpText>
    <label>Interest Component Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>