force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Is_Adjustment_Entry_Created__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Adjustment_Entry_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>in reversal, whether adjustment entry is created or not.</description>
    <inlineHelpText>in reversal, whether adjustment entry is created or not.</inlineHelpText>
    <label>Is Adjustment Entry Created</label>
    <type>Checkbox</type>
</CustomField>