force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Out_of_Order_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Out_of_Order_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will represent the related loan payment transaction.
New LPT will point to Old LPT and vice versa during out of order reversal.</description>
    <inlineHelpText>This field will represent the related loan payment transaction.
New LPT will point to Old LPT and vice versa during out of order reversal.</inlineHelpText>
    <label>Out of Order Payment</label>
    <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
    <relationshipLabel>Loan Payment Transactions (Out of Order Payment)</relationshipLabel>
    <relationshipName>Loan_Payment_Transactions2</relationshipName>
    <type>Lookup</type>
</CustomField>