force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Out_of_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>loan__Out_of_Order_Status__c</fullName>
    <description>This field will represent whether the transaction is reversed or cleared in Out of Order Reversal event.</description>
    <inlineHelpText>This field will represent whether the transaction is reversed or cleared in Out of Order Reversal event.</inlineHelpText>
    <label>Out of Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>