force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>loan__Payment_Mode__c.Name</field>
            <operation>notEqual</operation>
            <value>Internal Transfer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>loan__Payment_Mode__c</referenceTo>
    <relationshipLabel>Loan Payment Transactions</relationshipLabel>
    <relationshipName>Loan_Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>