force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Type__c</fullName>
    <description>This field is used to determine the reason for which payment is created.Reason can be to settle the loan, sell the loan or waive the interest.</description>
    <inlineHelpText>This field is used to determine the reason for which payment is created.Reason can be to settle the loan, sell the loan or waive the interest.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>Closure-Tolerance</fullName>
            </value>
            <value>
                <fullName>Principal Adjustment - Sub</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
            <value>
                <fullName>Write-Off Recovery</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Deposit Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>