force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Receipt_Date__c</fullName>
    <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
    <description>Receipt Date</description>
    <inlineHelpText>Receipt Date</inlineHelpText>
    <label>Receipt Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>