force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Retried__c.field-meta.xml
<CustomField>
    <fullName>loan__Retried__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, it means that the transaction has been retried.</inlineHelpText>
    <label>Retried</label>
    <type>Checkbox</type>
</CustomField>