force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Manual_Payment_Transaction_Amount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Manual_Payment_Transaction_Amount_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; loan__Manual_Payment__c &amp;&amp;  (  ROUND(loan__Transaction_Amount__c,2)   !=   ( ROUND(loan__Fees__c,2)  +  ROUND(loan__Interest__c,2)  +  ROUND(loan__Principal__c,2) + ROUND(loan__Excess__c,2) + ROUND(loan__Additional_Interest__c,2))  )</errorConditionFormula>
    <errorMessage>Interest, Principal, Fees and Excess must sum up to Transaction amount.</errorMessage>
</ValidationRule>